packages/noir/native/opentui_v0_5_1.h

// Noir-owned declaration of the canonical OpenTUI v0.5.1 exports selected by
// this package. The source of truth is external/opentui/packages/core/src/zig/
// lib.zig at ad9a818d7a9d73f3386e92a445d0feb4b395c69e.

typedef uint32_t OpenTuiHandle;
typedef struct CursorStyleOptions {
  uint8_t style;
  uint8_t blinking;
  const uint16_t *color;
  uint8_t cursor;
} CursorStyleOptions;
typedef struct NativeImageInfo {
  uint32_t width;
  uint32_t height;
  uint32_t sourceWidth;
  uint32_t sourceHeight;
  uint32_t format;
  uint32_t colorStatus;
  uint32_t orientation;
  uint32_t hasAlpha;
} NativeImageInfo;
typedef struct ImageDrawOptions {
  int32_t x;
  int32_t y;
  uint32_t width;
  uint32_t height;
  uint32_t pixelWidth;
  uint32_t pixelHeight;
  uint32_t sourceX;
  uint32_t sourceY;
  uint32_t sourceWidth;
  uint32_t sourceHeight;
  uint32_t protocol;
} ImageDrawOptions;
uint32_t linkAlloc(const uint8_t *url, uint32_t urlLen);
uint32_t linkGetUrl(uint32_t id, uint8_t *out, uint32_t maxLen);
uint32_t attributesWithLink(uint32_t baseAttributes, uint32_t linkId);
uint32_t attributesGetLinkId(uint32_t attributes);