lib/src/ffi/generated_bindings.dart


  int linkAlloc(ffi.Pointer<ffi.Uint8> url, int urlLen) {
    return _linkAlloc(url, urlLen);
  }

  late final _linkAllocPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint32)
        >
      >('linkAlloc');
  late final _linkAlloc = _linkAllocPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int linkGetUrl(int id, ffi.Pointer<ffi.Uint8> out, int maxLen) {
    return _linkGetUrl(id, out, maxLen);
  }

  late final _linkGetUrlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Uint32, ffi.Pointer<ffi.Uint8>, ffi.Uint32)
        >
      >('linkGetUrl');
  late final _linkGetUrl = _linkGetUrlPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int attributesWithLink(int baseAttributes, int linkId) {
    return _attributesWithLink(baseAttributes, linkId);
  }

  late final _attributesWithLinkPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Uint32, ffi.Uint32)>>(
        'attributesWithLink',
      );
  late final _attributesWithLink = _attributesWithLinkPtr
      .asFunction<int Function(int, int)>();

  int attributesGetLinkId(int attributes) {
    return _attributesGetLinkId(attributes);
  }

  late final _attributesGetLinkIdPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Uint32)>>(
        'attributesGetLinkId',
      );
  late final _attributesGetLinkId = _attributesGetLinkIdPtr
      .asFunction<int Function(int)>();
}

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  /// for alignment
  @ffi.LongLong()
  external int _mbstateL;
}

final class CursorStyleOptions extends ffi.Struct {
  @ffi.Uint8()
  external int style;

  @ffi.Uint8()
  external int blinking;

  external ffi.Pointer<ffi.Uint16> color;

  @ffi.Uint8()
  external int cursor;
}

final class NativeImageInfo extends ffi.Struct {
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int sourceWidth;

  @ffi.Uint32()
  external int sourceHeight;

  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int colorStatus;

  @ffi.Uint32()
  external int orientation;

  @ffi.Uint32()
  external int hasAlpha;
}

final class ImageDrawOptions extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int pixelWidth;

  @ffi.Uint32()
  external int pixelHeight;

  @ffi.Uint32()
  external int sourceX;

  @ffi.Uint32()
  external int sourceY;

  @ffi.Uint32()
  external int sourceWidth;

  @ffi.Uint32()
  external int sourceHeight;

  @ffi.Uint32()
  external int protocol;
}

/// Noir-owned declaration of the canonical OpenTUI v0.5.1 exports selected by
/// this package. The source of truth is external/opentui/packages/core/src/zig/
/// lib.zig at ad9a818d7a9d73f3386e92a445d0feb4b395c69e.
typedef OpenTuiHandle = ffi.Uint32;
typedef DartOpenTuiHandle = int;
